--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "libphonenumber-js": "^1.12.8",
     "lucide-react": "^0.471.1",
     "motion": "^12.4.7",
     "react": "^18.3.1",
